Change schedule to run workflow hourly

--- a/.github/workflows/rubbish_of_the_day.yml
+++ b/.github/workflows/rubbish_of_the_day.yml
@@ -2,10 +2,10 @@ name: Rubbish of The Day
 on:
     workflow_dispatch:
     schedule:
-      - cron: "0 16 * * *"
+      - cron: "0 * * * *"
 jobs:
     rubbish_of_the_day:
-        name: Rubbish of The Day
+        name: Rubbish of The Hour
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
